--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -1,47 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
-*{
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  padding: 0;
 }
 html {
   scroll-behavior: smooth;
-  transition: 30s;
+  transition: 60s;
 }
-
 /* //HEADER SECTION// */
 header {
-    background: #2bb7da;
-    margin-top: 45px;
-    height: 60px;
-    text-align: center;
-    justify-content: center;
-    /* padding-top: 0.1px;
-    padding-bottom: 0.1px; */
+  background: linear-gradient(to right, #2bb7da, #31d35c);
+  z-index: 1;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  margin-left: -0.39rem;
+  margin-right: -0.39rem;
 }
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem;
 }
-.header-logo h3, .footer-logo h3 {
-    color: white;
+
+.header-logo h3,
+.footer-logo h3 {
+  color: white;
+  font-size: 1.3rem;
 }
 .header-logo h3 {
-    margin-left: 1rem;
+  margin-left: 1rem;
+}
+.header-logo span,
+.footer-logo span {
+  color: lawngreen;
+  font-size: 1.4rem;
 }
 .nav-toggle {
-    display: none;
+  display: none;
 }
 .nav-checkbox {
-    display: none;
+  display: none;
 }
 .nav-menu {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 .nav-menu li:not(:last-child) {
-    margin-right: 1.5rem;
+  margin-right: 1.5rem;
 }
 .nav-menu li a,
 .nav-call-to-action a {
@@ -49,76 +57,54 @@ nav {
   color: white;
 }
 /* hover styles for the nav-link */
-.nav-link {
-  position: relative;
-}
-.nav-link:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  display: block;
-  height: 5px;
-  background: black;
-  left: 0;
-  right: 0;
-  bottom: -1.4625rem;
-  opacity: 0;
-}
+
 .nav-link:hover {
-  opacity: 0.75;
+  opacity: 0.85;
 }
-.nav-link:hover::before {
-  opacity: 0.75;
 
-    text-decoration: none;
-    color: white;
-
-}
 .nav-call-to-action {
-    margin-right: 2rem;
+  margin-right: 2rem;
 }
 .nav-call-to-action a {
-    border: 2px solid white;
-    border-radius: 5px;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 .nav-call-to-action a:first-child {
-    padding: 0.5rem 0.5rem;
-    margin-right: 0.2rem;
+  padding: 0.5rem 0.5rem;
+  margin-right: 0.2rem;
 }
 .nav-call-to-action a:last-child {
-    padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
 /* //MAIN SECTION// */
 
-
 .section-heading-separator {
-  display:flex;
-  justify-content:center;
-  position:relative;
+  display: flex;
+  justify-content: center;
+  position: relative;
   margin-bottom: 0.2em;
 }
 
-.section-heading-separator fieldset h2{
+.section-heading-separator fieldset h2 {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 10px;
   text-transform: uppercase;
   text-align: center;
-  
 }
-.section-heading-separator .sub-title{
-  font-size:2.2em;
-  font-family:'Times New Roman', Times, serif;
+.section-heading-separator .sub-title {
+  font-size: 2.2em;
+  font-family: "Times New Roman", Times, serif;
   line-height: 1.2;
   color: black;
   background-color: white;
   position: relative;
   z-index: 1;
- }
+}
 
 .section-heading-separator fieldset {
-  width:100%;
+  width: 100%;
   text-align: center;
   border-left: none;
   border-right: none;
@@ -128,49 +114,51 @@ nav {
   color: red;
 }
 
-.sub-title{
-    margin: 20px 20px;
-    text-align: center;
-    font-size: bold;
+.sub-title {
+  margin: 20px 20px;
+  text-align: center;
+  font-size: bold;
 }
 
-.first{
+.first {
   border-bottom: 2px solid rgb(226, 217, 217);
 }
 
-.left-section, .right-section{
+.left-section,
+.right-section {
   /* width: 25%; */
 }
 
-.middle-section{
+.middle-section {
   /* width: 45%; */
   border-left: 2px solid rgb(226, 217, 217);
   border-right: 2px solid rgb(226, 217, 217);
   margin-top: 10px;
   padding-left: 50px;
-  padding-right: 50px; 
+  padding-right: 50px;
 }
 
- .middle img{
+.middle img {
   width: 100%;
   height: 300px;
   object-fit: cover;
   object-position: center;
   border-radius: 15px;
-} 
+}
 
 .middle {
   padding-left: 5px;
-  padding-right: 5px; 
+  padding-right: 5px;
   margin-top: 10px;
 }
 
-.middle-title{
+.middle-title {
   font-size: 24px;
   text-align: center;
 }
 
-.right img, .left img {
+.right img,
+.left img {
   width: 100%;
   height: 180px;
   object-fit: cover;
@@ -178,146 +166,158 @@ nav {
   border-radius: 15px;
 }
 
-.news-headlines{
+.news-headlines {
   display: flex;
   justify-content: space-evenly;
   gap: 100px;
-  border-bottom: 1px solid rgb(226, 217, 217); 
+  border-bottom: 1px solid rgb(226, 217, 217);
   margin-left: 25px;
   margin-right: 25px;
   padding-bottom: 50px;
 }
-.container-wrapper{
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    gap: 20px;
-    margin-top: 2rem;
-
+.container-wrapper {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 20px;
+  margin-top: 2rem;
 }
 
- a {
-   text-decoration: none;
-   color: black;
- }
+a {
+  text-decoration: none;
+  color: black;
+}
 
- .other-news-container{
-   display: flex;
-   flex-direction: column;
-   gap: 100px;
-   justify-content: space-between;
-   margin-top: 5rem;
- } 
+.other-news-container {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  justify-content: space-between;
+  margin-top: 5rem;
+}
 
- .div-wrapper{
+.div-wrapper {
   width: 15%;
-  
 }
 
 .div-wrapper img {
   width: 100%;
   height: 150px;
   border-radius: 10px;
-} 
+}
 
-.div-wrapper p{
+.div-wrapper p {
   width: 98%;
   margin-left: 5px;
   margin-top: 2.5px;
 }
 
 .other-news-row {
- /* width: 100%; */
- display: flex; 
- justify-content: space-around;
- /* align-items: center; */
+  /* width: 100%; */
+  display: flex;
+  justify-content: space-around;
+  /* align-items: center; */
 }
 
 /* RESPONSIVE SECTION */
 @media (max-width: 750px) {
-
-  .news-headlines{
+  .news-headlines {
     flex-direction: column;
   }
-  .left-section, .middle-section, .right-section{
+  .left-section,
+  .middle-section,
+  .right-section {
     width: 90%;
-  margin: 0 auto
-}
-  .right img, .left img{
+    margin: 0 auto;
+  }
+  .right img,
+  .left img {
     width: 100%;
     height: auto;
   }
-  .middle img{
+  .middle img {
     height: auto;
   }
-  .div-wrapper img{
+  .div-wrapper img {
     width: 100%;
     height: auto;
   }
-  .middle-section{
-  margin: 0px 0px 0px 0px; 
-  border-left: none; 
-  border-right: none;
+  .middle-section {
+    margin: 0px 0px 0px 0px;
+    border-left: none;
+    border-right: none;
   }
-   
-   .middle {
+
+  .middle {
     padding-left: 0px;
     padding-right: 0px;
   }
-  .other-news-container{
+  .other-news-container {
     /* gap: 0; */
   }
-  .other-news-row{
+  .other-news-row {
     flex-direction: column;
     /* gap: 0; */
   }
-  .div-wrapper{
+  .div-wrapper {
     width: 100%;
   }
 }
-  
- /* //FOOTER SECTION//  */
- footer {
-  background-color: #2bb7da;
-  margin-top: 5rem;
+
+/* //FOOTER// */
+footer {
+  background-color: black;
   padding-top: 1rem;
-}
-.container {
-  width: 95%;
-  max-width: 1100px;
-  margin: 0 auto;
+  margin-bottom: -2rem;
+  margin-left: -0.45rem;
+  margin-right: -0.45rem;
 }
 
 .footer-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: 1.5rem;
 }
-.footer-call-to-action a {
+
+.footer-form {
+  display: flex;
+  width: 35%;
+  justify-content: space-between;
+}
+.form-search-wrapper {
+  width: 68%;
+}
+.search-button {
+  width: 30%;
+}
+.footer-form a {
   display: inline-block;
   text-decoration: none;
   background-color: white;
-  color: #2bb7da;
+  color: black;
   border: 2px solid white;
   border-radius: 5px;
-  padding: 1rem 1.2rem 0.4rem 1.2rem;
+  padding: 1rem 1.2rem 0.5rem 1.2rem;
+  margin-left: 0.3rem;
+  /* width: 60%; */
+  text-align: center;
 }
-.footer-call-to-action {
-  display: flex;
-  margin-right: 2rem;
+.footer-form a:hover {
+  color: #31d35c;
+}
+.footer-form .search-input {
+  padding: 1rem;
+  background: black;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  width: 100%;
 }
 
-form .search-input {
-  padding: 1rem;
-  background: #2bb7da;
-  color: white;
-  border: 2px solid white;
-  border-left: none;
-  border-radius: 5px;
-  margin-left: -7px;
-}
 ::placeholder {
   color: white;
+  font-size: 1rem;
 } /* Firefox */
 form .search-input:focus {
   outline: none;
@@ -328,6 +328,8 @@ form .search-input:focus {
 
 .footer-middle-section {
   margin-top: 2rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
   display: flex;
   justify-content: space-between;
   font-size: 1.2rem;
@@ -337,42 +339,52 @@ form .search-input:focus {
   display: flex;
   flex-direction: column;
 }
-.footer-section:first-child {
-  margin-left: 1.8rem;
-}
-.footer-section:last-child {
-  margin-right: 1.8rem;
-}
+
 .footer-section a {
   text-decoration: none;
   color: white;
   margin-bottom: 0.2rem;
 }
-/* .footer-subscribe-btn-container {
-  width: 20%;
-} */
-.footer-section .subscribe-btn {
-  display: inline-block;
-  text-decoration: none;
-  color: white;
-  border: 2px solid white;
-  font-weight: 600;
-  padding: 0.6rem 2.5rem;
-  border-radius: 5px;
-  margin-top: 0.6rem;
+.footer-section a:hover {
+  color: #31d35c;
 }
-
+.footer-subscribe-btn {
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+  background-color: black;
+  width: 100%;
+  padding: 0.8rem 0;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  margin-top: 0.3rem;
+}
+.footer-subscribe-btn:hover {
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+}
 footer hr {
   margin: 1rem 0;
+  height: 1.2px;
+  background-color: white;
+  border: none;
 }
 .footer-bottom-section {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  margin: 1.5rem 0 1.5rem 1.5rem;
+}
+.footer-bottom-link {
+  flex-wrap: nowrap;
+  width: 40%;
 }
 .footer-bottom-link a {
   text-decoration: none;
   color: white;
+}
+.footer-bottom-link a:hover {
+  color: #31d35c;
 }
 .footer-bottom-link a:not(:last-child) {
   margin-right: 1.5rem;
@@ -382,35 +394,52 @@ footer hr {
   margin-left: 1.8rem;
 }
 .footer-social-links {
+  width: 30%;
   margin-right: 2rem;
   display: flex;
-
+  justify-content: space-between;
   align-items: center;
+  margin-right: 2rem;
 }
 .footer-social-links a {
   text-decoration: none;
+}
+.footer-social-links a:hover {
+  transform: scale(1.1);
+}
+.footer-social-links svg:hover {
+  fill: #31d35c;
 }
 .footer-social-links p {
   margin-right: 0.5rem;
 }
 .footer-social-links a:not(:last-child) {
-  margin-right: 0.9rem;
+  margin-right: 0.5rem;
 }
 .footer-social-links svg {
   fill: white;
 }
-
+.footer-copyright {
+  width: 90%;
+  margin: 1rem auto 1rem auto;
+}
 .copyright {
   text-align: center;
   color: white;
-  margin-top: 1rem;
   padding-bottom: 1rem;
   text-transform: uppercase;
   font-weight: 600;
 }
+
 @media (max-width: 750px) {
   header {
-    position: relative;
+    z-index: 1;
+    position: sticky;
+    top: 0px;
+    left: 0px;
+  }
+  .header-logo {
+    margin-left: -1.5rem;
   }
   .nav-toggle {
     display: block;
@@ -438,15 +467,11 @@ footer hr {
   }
   .nav-links {
     position: absolute;
-/*     margin-top: 2.76rem;
-    top: 13px; */
+    margin-top: 2.76rem;
+    top: 17px;
     right: 0;
-
-    margin-top: 3.3rem;
-    /* left: 50%; */
-    top: 20px;
-
     width: 100%;
+    z-index: 100;
   }
 
   li {
@@ -466,11 +491,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background: linear-gradient(to right, #2bb7da, #31d35c);
     opacity: 1.5;
-/*     height: 63vh; */
-/*     background-color: black; */
-    opacity: 0.9;
-    height: 94vh;
-
+    height: 50vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
@@ -480,7 +501,6 @@ footer hr {
   footer {
     font-size: 1rem;
   }
-
   .footer-form {
     margin-top: 0.5rem;
     width: 80%;
@@ -495,15 +515,13 @@ footer hr {
   .search-button {
     width: 18%;
   }
-  .footer-call-to-action a {
-    padding: 0.6rem 0.5rem 0.2rem 0.5rem;
-  }
-  form .search-input {
+  .foter-form .search-input {
     padding: 0.8rem;
   }
   .footer-top {
     flex-direction: column;
   }
+
   .footer-middle-section {
     flex-wrap: wrap;
     font-size: 1rem;
@@ -513,31 +531,67 @@ footer hr {
     width: 32%;
   }
   .footer-section:nth-child(3) {
-    margin-top: 0.5rem;
+    margin-top: 0.8rem;
   }
-  .footer-section:first-child {
-    margin-left: 1rem;
-  }
-  .footer-section:nth-child(2) {
-    margin-right: 1rem;
-  }
+
   .footer-section:last-child {
-    margin-top: 0.5rem;
-    margin-right: 1rem;
-    margin-left: 2rem;
+    margin-top: 0.8rem;
   }
   .footer-section .subscribe-btn {
-    padding: 0.4rem 3rem 0.4rem 3rem;
+    display: inline-block;
+    padding: 0.4rem 2rem 0.4rem 2rem;
   }
   .footer-bottom-section {
-    flex-direction: column;
     text-align: center;
   }
   .footer-bottom-section p {
     margin-left: 0;
   }
-  .footer-bottom-section p,
-  .footer-bottom-link {
+  .footer-bottom-section {
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-bottom-link {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1.5rem;
+  }
+  .footer-social-links {
+    width: 55%;
+    margin: 0 auto;
+  }
+  .social-link {
+    display: flex;
+    justify-content: center;
+  }
+  .copyright {
+    font-weight: 700;
+    /* line-height: 1.4; */
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  /*For very small devices*/
+  .footer-middle-section {
+    justify-content: center;
+  }
+  .footer-section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-bottom-link {
+    flex-direction: row;
+    width: 70%;
+  }
+  .footer-social-links {
+    width: 90%;
+    margin-top: 1rem;
   }
 }
