--- a/css/sports.css
+++ b/css/sports.css
@@ -744,6 +744,7 @@ footer hr {
     top: 19px;
     right: 0;
     width: 100%;
+    z-index: 100;
   }
 
   li {
@@ -763,14 +764,10 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background: linear-gradient(to right, #2bb7da, #31d35c);
     opacity: 1.5;
-    height: 52vh;
+    height: 50vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
-  .section-heading-separator .heading-title {
-    z-index: -1;
-  }
-
   .nav-call-to-action {
     display: none;
   }
@@ -1129,9 +1126,9 @@ footer hr {
     height: 50px;
   }
 
-  .section-news-content-container,
+  /* .section-news-content-container,
   .news-content-container {
-  }
+  } */
   .section-news-content-container,
   .news-content-container {
     display: flex;
@@ -1169,6 +1166,7 @@ footer hr {
 }
 
 /* EXTRA SMALL DEVICES LIKE SMARTPHONES */
+
 
 /* @media only screen and (max-width: 479px){
     main{
